[gd_scene load_steps=9 format=3 uid="uid://bw2upaavver5j"]

[ext_resource type="Script" path="res://Scenes/UI/crafting_recipe_ui.gd" id="1_xl7al"]
[ext_resource type="Texture2D" uid="uid://i023myvi1c4y" path="res://Assets/Art/short_sword.png" id="2_ae8hc"]
[ext_resource type="FontFile" uid="uid://bowq5l47wqgxq" path="res://Assets/Fonts/Kenney Pixel.ttf" id="3_ro7km"]
[ext_resource type="Texture2D" uid="uid://dixgjk551lkgh" path="res://Assets/UI/buttonSquare_blue.png" id="4_qpep7"]
[ext_resource type="Texture2D" uid="uid://qvwbtu04dtvg" path="res://Assets/UI/buttonSquare_blue_pressed.png" id="5_13qq2"]

[sub_resource type="LabelSettings" id="LabelSettings_v1pxs"]
font = ExtResource("3_ro7km")
font_size = 18

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_50dij"]
texture = ExtResource("4_qpep7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xyrwq"]
texture = ExtResource("5_13qq2")

[node name="CraftingRecipeUI" type="Panel"]
custom_minimum_size = Vector2(0, 60)
offset_right = 256.0
offset_bottom = 60.0
size_flags_horizontal = 3
script = ExtResource("1_xl7al")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("2_ae8hc")

[node name="RecipeText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -30.0
offset_right = 180.0
offset_bottom = 30.0
grow_vertical = 2
label_settings = SubResource("LabelSettings_v1pxs")
vertical_alignment = 1
autowrap_mode = 2

[node name="CraftButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -13.0
offset_right = -5.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ro7km")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_50dij")
theme_override_styles/hover = SubResource("StyleBoxTexture_50dij")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xyrwq")
text = "Craft"

[connection signal="pressed" from="CraftButton" to="." method="_on_craft_button_pressed"]
